--- a/themes/at-sky.css
+++ b/themes/at-sky.css
@@ -366,3 +366,28 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
     background-color: var(--r-background-color);
   }
 }
+
+.footer {
+   position: absolute;
+   display: table;
+   width: 100%;
+   bottom: 0;
+
+   color: $color-primary-2;
+}
+
+.footer span {
+   display: table-cell;
+   padding: 0px 15px 5px;
+
+   text-align: center;
+   font-family: "Roboto Mono", monospace;
+   font-size: 70%;
+}
+
+.footer span:nth-of-type(1) {
+   text-align: left;
+}
+.footer span:nth-last-child(1) {
+   text-align: right;
+}
